--- a/sneakerbox_fullstack/public/css/index.css
+++ b/sneakerbox_fullstack/public/css/index.css
@@ -1,7 +1,7 @@
 /* Project Name: Blank Template
 Client: Your Client
-Author: Lilly Percival
-Developer @RC in Boston
+Author: Kareem
+
 Date (started):
 Date (completed):
 */
