--- a/sneakerbox_fullstack/views/login.ejs
+++ b/sneakerbox_fullstack/views/login.ejs
@@ -27,7 +27,6 @@
                             <!-- <li><a href="#"><img src="" alt=""></a></li> -->
                             <li><a href="#">About</a></li>
                             <li><a href="/profile">Sneaker Collections</a></li>
-                            <li><a href="/login">login</a></li>
                             <li><a href="/">home</a></li>
                         </ul>
                     </nav>
@@ -56,6 +55,8 @@
                     <!-- <hr> -->
 
                     <p></p><a href="/signup">Create Accout +</a>
+                    <p><a href="/login">login</a></p>
+
                     
             </div>
         </div>
