--- a/sneakerbox_fullstack/public/css/profile.css
+++ b/sneakerbox_fullstack/public/css/profile.css
@@ -1,3 +1,13 @@
+* {
+  box-sizing: border-box;
+}
+
+body,
+html{
+    font-family: sans-serif;
+  height: 100%;
+  background: #e5e5e5;
+}
 
 
 h1{
@@ -10,13 +20,250 @@ h1{
 
 }
 
-
-
-
-
 img{
     height:100px;
     width:100px;
 }
 
+.userBox{
+    border: 2px solid black;
+}
+
+
+
+
+.grid-container {
+  max-width: 1260px;
+  position: relative;
+  margin: 0 auto;
+}
+
+.max-width-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin: 0 auto;
+  justify-content: center;
+  border: 4px solid orange;
+}
+
+.item-container {
+  height: 307px;
+  max-width: 307px;
+  margin: 3px;
+  background: #1b1b1b;
+  position: relative;
+  background-position: center;
+  background-size: cover;
+  flex: 1 307px;
+   &:hover {
+    cursor: pointer;
+  }
+  @media screen and (max-width: 570px) {
+    width: 100%;
+    margin: 0 0 20px 0;
+  }
+}
+
+.dropdown-content {
+  width: 98vw;
+  max-width: calc(100% - 14px) !important;
+  height: 600px;
+  max-width: 1700px;
+  background: #fff;
+  position: absolute;
+  margin: 10px 0;
+  left:7px;
+  padding: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  transition: height 1.5s ease;
+  h1 {
+    font-size: 3rem;
+  }
+  
+   @media screen and (max-width: 1023px) {
+    padding: 40px 1rem;
+    padding-bottom: 0;
+  }
+  
+}
+
+.hideContent {
+  display: none;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 1.3rem;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+
+.arrow-up {
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    position: absolute;
+    border-bottom: 20px solid #1b1b1b;
+    bottom: -15px;
+    left: calc(50% - 20px);
+    transform: rotate(180deg);
+}
+
+.expand-icon {
+  width: 40px;
+  position: absolute;
+  bottom: 10px;
+  left: calc(50% - 20px);
+  transform: all .1s;
+}
+
+.hide {
+  display: none;
+}
+
+.expand-icon.expanded {
+  transform: rotate(45deg);
+}
+
+
+.dropdown-content-flex-container {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  flex-wrap: wrap;
+  &__child {
+    flex-basis: 100%;
+     @media screen and (min-width: 1023px) {
+      flex-basis: 50%;
+    }
+  }
+  .bg-image {
+    background: black;
+    @media screen and (max-width: 1023px) {
+      height: 50%;
+    }
+  }
+  .text-content {
+    padding: 0 5rem;
+    @media screen and (max-width: 1023px) {
+      padding: 1rem;
+    }
+  }
+}
+
+
+
+// tabbed styles
+
+.tab-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    margin-bottom: 4rem;
+}
+
+.tab-container a {
+    margin: 0 1rem;
+    text-decoration: none;
+    color: #fff;
+    display: inline-block;
+    padding: 10px;
+}
+
+.tab-container a:nth-of-type(1) {
+    background-color: crimson;
+}
+
+.tab-container a:nth-of-type(2) {
+    background-color: rebeccapurple;
+}
+
+.tab-container a:nth-of-type(3) {
+    background-color: lightcoral;
+}
+
+.tab-container a:nth-of-type(4) {
+    background-color: green;
+}
+
+// tabbed styles end
+
+
+// datepicker styles
+
+.datepicker {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 2rem;
+}
+
+.datepicker input {
+    max-width: 100px;
+    border: 2px solid #0095d7;
+    border-radius: 30px;
+    margin: 0 1rem;
+    text-align: center;
+}
+
+.datepicker .apply-cta {
+    margin-right: 0;
+    margin-top: 0;
+    padding: 10px 25px;
+    border: none;
+}
+
+.ui-datepicker {
+    z-index: 50 !important;
+}
+
+
+
+.datepicker-input {
+    padding: 7px 10px;
+}
+
+.apply-cta{
+    background-color: #0095d7;
+    color: #fff;
+    border-radius: 30px;
+    text-align: center;
+    padding: 10px;
+    text-transform: uppercase;
+    font-size: 12px;
+    display: inline-block;
+}
+
+.wrap {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+
+.offer {
+  width: 300px;
+  height: 300px;
+  background: red;
+  margin: 0 1rem;
+  text-align: center;
+}
+
+.hide {
+  display: none;
+}
 
