--- a/sneakerbox_fullstack/views/profile.ejs
+++ b/sneakerbox_fullstack/views/profile.ejs
@@ -9,13 +9,24 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
+     <meta charset="utf-8">
+    	<!-- <meta name="description" content="Your description goes here"> -->
+    	<!-- <meta name="keywords" content="one, two, three"> -->
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
+    	<script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
 
+		<title>SnEaKer BoX</title>
+		<!-- external CSS link -->
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
+</head>
 <body>
 
   <header class="proHeader">
     <h1>SnEaker BoX</h1>
-    <h3 class="promainH3">Upload a pic of you favorite food & write a review</h3>
+    <h3 class="promainH3">+ Sneaker </h3>
   </header>
+
 
   <section class="usersBox">
     <section class="avatar">
@@ -28,22 +39,289 @@
       <input id="avatarSubmit" type="submit">
       </form>
     </section>
-    <span>User Pic</span>
 
-  </section>
-
+	<div class="userInputBtn">
+    <select id="brandselect">
+      <option>None</option>
+      <option>Jordan</option>
+      <option>Nike</option>
+      <option>Adidas</option>
+      <option>New Balance</option>
+      <option>Rebook</option>
+      <option>Converse</option>
+    </select>
+    <input type="submit" id="userInput" value="apply" aria-label="Check dates">
+  </div>
   
 
-  <section class = "bottomSec">
-  <form action="/api/reviews" method="post" enctype="multipart/form-data">
-    <input hidden type="text" name="username" value="<%= user.local.name %>">
-    <input id="message" type="text" name="review" placeholder="Your Review Here">
-    <input multiple type="file" name="images">
-    <button type="submit" name="button">Submit</button>
-  </form>
-</section>
+<div>
+  <ul>
+    <% for(var i=0; i<sneakers.length; i++) { %>
+    <li>
+      <img src="images/sneakerimg/<%= sneakers[i].image %>" />
+      <span><%=sneakers[i].name%></span>
+      <span><%=sneakers[i].retail_price%></span>
+      <input type="submit" id="addsneaker" placeholder="+ collection">
+    </li>
+    <% } %>
+  </ul>
+</div>
 
+<!-- 
+<div class="grid-container">
+  
+ <!--  ROW 1  --> 
+  
+ <div class="max-width-container">
+  <div class="item-container" data-show="false" data-category="bob" data-start="20190103" data-max="20190217" tabindex="0">
+    <a href="#" class="grid-item"></a>
+    <div class="arrow-up hide"></div>
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/978186/plus-icon.svg" alt="" class="expand-icon"/>
+  </div>
+   <div class="dropdown-content hideContent">
+      <div class="dropdown-content-flex-container">
+          <!--     carousel     -->
+
+                  <div class="bg-image dropdown-content-flex-container__child"></div>
+
+          <!--     carousel -- END   -->
+
+
+
+          <!--     text content     -->
+
+                  <div class="text-content dropdown-content-flex-container__child">
+                    <h2>Content 1</h2>
+                    <h2>bob</h2>
+                    <h3>Content 1 sub heading</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim reprehenderit quibusdam saepe dolores velit beatae corporis voluptate ipsa vero volupta.</p>
+                  </div>
+
+          <!--     text content -- END   -->
+        
+     </div>
+     <span class="close-btn" tabindex="0">X</span>
+   </div>
+  <div class="item-container" data-show="false" data-category="bob" data-start="20190103" data-max="20191117" tabindex="0">
+    <a href="#" class="grid-item"></a>
+    <div class="arrow-up hide"></div>
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/978186/plus-icon.svg" alt="" class="expand-icon"/>
+  </div>
+   <div class="dropdown-content hideContent">
+      <div class="dropdown-content-flex-container">
+          <!--     carousel     -->
+
+                  <div class="bg-image dropdown-content-flex-container__child"></div>
+
+          <!--     carousel -- END   -->
+
+
+
+          <!--     text content     -->
+
+                  <div class="text-content dropdown-content-flex-container__child">
+                    <h2>Content 2</h2>
+                     <h2>bob</h2>
+                    <h3>Content 2 sub heading</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim reprehenderit quibusdam saepe dolores velit beatae corporis voluptate ipsa vero volupta.</p>
+                  </div>
+
+          <!--     text content -- END   -->
+        
+     </div>
+     <span class="close-btn" tabindex="0">X</span>
+   </div>
+  <div class="item-container" data-show="false" tabindex="0"  data-category="dog">
+    <a href="#" class="grid-item"></a>
+    <div class="arrow-up hide"></div>
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/978186/plus-icon.svg" alt="" class="expand-icon"/>
+  </div>
+      <div class="dropdown-content hideContent">
+      <div class="dropdown-content-flex-container">
+          <!--     carousel     -->
+
+                  <div class="bg-image dropdown-content-flex-container__child"></div>
+
+          <!--     carousel -- END   -->
+
+
+
+          <!--     text content     -->
+
+                  <div class="text-content dropdown-content-flex-container__child">
+                    <h2>Username</h2>
+                    <h2>retail price</h2>
+                    <h3># Pairs</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim reprehenderit quibusdam saepe dolores velit beatae corporis voluptate ipsa vero volupta.</p>
+                  </div>
+
+          <!--     text content -- END   -->
+        
+     </div>
+     <span class="close-btn" tabindex="0">X</span>
+   </div>
+  <div class="item-container" data-show="false" tabindex="0">
+    <a href="#" class="grid-item"></a>
+    <div class="arrow-up hide"></div>
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/978186/plus-icon.svg" alt="" class="expand-icon"/>
+  </div>
+   <div class="dropdown-content hideContent">
+      <div class="dropdown-content-flex-container">
+          <!--     carousel     -->
+
+                  <div class="bg-image dropdown-content-flex-container__child"></div>
+
+          <!--     carousel -- END   -->
+
+
+
+          <!--     text content     -->
+
+                  <div class="text-content dropdown-content-flex-container__child">
+                    <h2>Content 4</h2>
+                    <h3>Content 4 sub heading</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim reprehenderit quibusdam saepe dolores velit beatae corporis voluptate ipsa vero volupta.</p>
+                  </div>
+
+          <!--     text content -- END   -->
+        
+     </div>
+     <span class="close-btn" tabindex="0">X</span>
+   </div>
+  
+<!--  ROW 2  -->
+  
+   <div class="item-container" data-show="false" tabindex="0">
+    <a href="#" class="grid-item"></a>
+     <div class="arrow-up hide"></div>
+     <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/978186/plus-icon.svg" alt="" class="expand-icon"/>
+  </div>
+      <div class="dropdown-content hideContent">
+      <div class="dropdown-content-flex-container">
+          <!--     carousel     -->
+
+                  <div class="bg-image dropdown-content-flex-container__child"></div>
+
+          <!--     carousel -- END   -->
+
+
+
+          <!--     text content     -->
+
+                  <div class="text-content dropdown-content-flex-container__child">
+                    <h2>Content 5</h2>
+                    <h3>Content 5 sub heading</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim reprehenderit quibusdam saepe dolores velit beatae corporis voluptate ipsa vero volupta.</p>
+                  </div>
+
+          <!--     text content -- END   -->
+        
+     </div>
+     <span class="close-btn" tabindex="0">X</span>
+   </div>
+  <div class="item-container" data-show="false" tabindex="0">
+    <a href="#" class="grid-item"></a>
+    <div class="arrow-up hide"></div>
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/978186/plus-icon.svg" alt="" class="expand-icon"/>
+  </div>
+      <div class="dropdown-content hideContent">
+      <div class="dropdown-content-flex-container">
+          <!--     carousel     -->
+
+                  <div class="bg-image dropdown-content-flex-container__child"></div>
+
+          <!--     carousel -- END   -->
+
+
+
+          <!--     text content     -->
+
+                  <div class="text-content dropdown-content-flex-container__child">
+                    <h2>Content 6</h2>
+                    <h3>Content 6 sub heading</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim reprehenderit quibusdam saepe dolores velit beatae corporis voluptate ipsa vero volupta.</p>
+                  </div>
+
+          <!--     text content -- END   -->
+        
+     </div>
+     <span class="close-btn" tabindex="0">X</span>
+   </div>
+  <div class="item-container" data-show="false" tabindex="0">
+    <a href="#" class="grid-item"></a>
+    <div class="arrow-up hide"></div>
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/978186/plus-icon.svg" alt="" class="expand-icon"/>
+  </div>
+      <div class="dropdown-content hideContent">
+      <div class="dropdown-content-flex-container">
+          <!--     carousel     -->
+
+                  <div class="bg-image dropdown-content-flex-container__child"></div>
+
+          <!--     carousel -- END   -->
+
+
+
+          <!--     text content     -->
+
+                  <div class="text-content dropdown-content-flex-container__child">
+                    <h2>Content 7</h2>
+                    <h3>Content 7 sub heading</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim reprehenderit quibusdam saepe dolores velit beatae corporis voluptate ipsa vero volupta.</p>
+                  </div>
+
+          <!--     text content -- END   -->
+        
+     </div>
+     <span class="close-btn" tabindex="0">X</span>
+   </div>
+  <div class="item-container" data-show="false" tabindex="0">
+    <a href="#" class="grid-item"></a>
+    <div class="arrow-up hide"></div>
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/978186/plus-icon.svg" alt="" class="expand-icon"/>
+  </div>
+   <div class="dropdown-content hideContent">
+      <div class="dropdown-content-flex-container">
+          <!--     carousel     -->
+
+                  <div class="bg-image dropdown-content-flex-container__child"></div>
+
+          <!--     carousel -- END   -->
+
+
+
+          <!--     text content     -->
+
+                  <div class="text-content dropdown-content-flex-container__child">
+                    <h2>Content 8</h2>
+                    <h3>Content 8 sub heading</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim reprehenderit quibusdam saepe dolores velit beatae corporis voluptate ipsa vero volupta.</p>
+                  </div>
+
+          <!--     text content -- END   -->
+        
+     </div>
+     <span class="close-btn" tabindex="0">X</span>
+   </div>
+        
+  </div>
+</div>
+</div>
+  
+</div> -->
+
+
+
+
+
+
+
+
+
+ 
   <script src="/js/main.js"></script>
+
+  
 </body>
 
 </html>
