--- a/sneakerbox_fullstack/views/index.ejs
+++ b/sneakerbox_fullstack/views/index.ejs
@@ -15,7 +15,7 @@
 		<title>SnEaKer BoX</title>
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
+		
 	</head>
 	<body>
 
@@ -25,10 +25,11 @@
 
 		<section class="khfInfo">
 			<ul>
-                <li><a href="/login" class="btn btn-default" class="blue">login</a></li>
-                <li><a href="/signup" class="btn btn-default" class="red">about</a></li>
-                <li><a href="/profile" class="btn btn-default" class="green">sneaker collection</a></li>
-            </ul>
+                <li><a class ="firstNav" href="/login" class="btn btn-default" class="blue">login</a></li>
+                <li><a class ="firstNav" href="/search" class="btn btn-default" class="red">search</a></li>
+				<li><a class ="firstNav" href="/community" class="btn btn-default" class="green">sneaker collection</a></li>
+				
+        	</ul>
 		</section>
 		<!-- external JavaScript link -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
