--- a/sneakerbox_fullstack/public/css/login.css
+++ b/sneakerbox_fullstack/public/css/login.css
@@ -8,14 +8,17 @@
     padding: 0;
     margin: 0;
   }
+  a{
+    background: #f5f2f269;
+    color: black;
+  }
+
   
   body{
-    background-color: #fff;
-    color: #666;
+    background-color:#222;
+    /* color: #666; */
     font-family: monospace, Helvetica, Verdana, Geneva, sans-serif;
     font-size: 16px;
-    background-image: url('../images/mainimg.jpeg');
-    background-size: cover;
   }
   #pagewrap{
     max-width: 100%;
@@ -25,9 +28,9 @@
   
   /* main header */
   
-  #main, nav, section, footer{
+  /* #main, nav, section, footer{
     margin: 1%;
-  }
+  } */
   
   /* #main{
     width: 100%;
@@ -43,7 +46,7 @@
   #main h1{
     text-align: center;
     font-size: 3em;
-    font-family: monospace, Helvetica, Verdana, Geneva, sans-serif;
+    font-family: monospace, Helvetica, Verdana, Geneva, sans-serif
     
   }
   /* end of main header */
@@ -62,6 +65,7 @@
   nav ul{
     list-style-type: none;
     text-align: center;
+    font-size: 20px;
   }
   
   nav ul li{
@@ -93,7 +97,21 @@
     padding-top: 50vh;
     /* padding-bottom: 50vh; */
     /* float: right; */
+    background-image: url('../images/logo.jpg');
+    background-size: cover;
+    background-position: left;
+    background-repeat: no-repeat;
+    /* position: relative; */
+    opacity: .9;
+    -webkit-filter: grayscale(90%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+    /* margin-bottom: 40px; */
+    clear: both;
   }
+  .placeholders{
+    color:black;
+  }
+  
 
   
 
@@ -117,9 +135,9 @@
 
 
   .loginImgSec{
-    /* background-image: url(''); */
+    background-image: url('../images/mainimg.jpeg');
     background-size: cover;
-    background-position: 50% 20%;
+    /* background-position: 50% 20%; */
     border: 2px solid red;
     /* width: 100%; */
     /* height: 300px; */
@@ -129,6 +147,10 @@
     padding-top: 50vh;
     padding-bottom: 50vh;
     /* float: right; */
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+
 
   }
 
